--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
-	"name": "Chat-Room",
-	"version": "0.1",
+	"name": "Chat-Room-Project",
+	"version": "0.1.0",
 	"dependencies": {},
 	"engines":{
-		"node": "0.10.10",
-		"npm": "1.2.25"}
+		"node": "0.10.x",
+		"npm": "1.2.x"},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/DrJonOsterman/NodeJSChatRoom.git"}
 }
