--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
 	"name": "Chat-Room-Project",
 	"version": "0.1.0",
-	"dependencies": {},
+	"dependencies": {
+		"connect" : "2.7.x",
+		"connect-route" : "0.1.3"
+	},
 	"engines":{
 		"node": "0.10.x",
-		"npm": "1.2.x"},
+		"npm": "1.2.x"
+	},
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/DrJonOsterman/NodeJSChatRoom.git"}
+		"url": "https://github.com/DrJonOsterman/NodeJSChatRoom.git"
+	}
 }
